# hours4climate-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose-le.yaml  docker-compose.yaml  emissions_etl.py  run.sh  test.sh
.github/workflows/: build.yaml
config/: nginx.conf
nginx/: nginx.conf
src/: config.rs  countries.rs  db.rs  main.rs
