[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "*"
tower-http = { version = "*", features = ["fs", "trace", "cors"] }
reqwest = { version="*", features = ["json"] }
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
chrono = "*"
envconfig = "*"
